[tool.poetry]
name = "gen3"
homepage = "https://gen3.org/"
version = "4.25.3"
description = "Gen3 CLI and Python SDK"
authors = ["Center for Translational Data Science at the University of Chicago <support@gen3.org>"]
license = "Apache-2.0"
packages = [
    { include = "gen3" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
requests = "*"
indexclient = "^2.3.0"
drsclient = "^0.2.3"
aiohttp = "*"
backoff = "*"
cdislogging = "^1.1.0"
click = "*"
jsonschema = "*"
# FIXME updating to >=0.6.0 breaks a few tests
dataclasses-json = "<=0.5.9"
pypfb = "^0.5.29"
tqdm = "^4.61.2"
humanfriendly ="*"
python-dateutil = "*"
aiofiles = "^0.8.0"
pandas = ">=1.4.2"
urllib3 = ">2.0.0"
httpx = "*"
xmltodict = "^0.13.0"
pyyaml = ">=6.0.1"
gen3users = "*"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
fhirclient = { version = "*", optional = true }

[tool.poetry.extras]
fhir = ["fhirclient"]

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "*"
requests-mock = "*"
cdisutilstest = { git = "https://github.com/uc-cdis/cdisutils-test.git", tag = "1.0.0" }
indexd = { git = "https://github.com/uc-cdis/indexd.git", tag = "5.0.4" }

[tool.poetry.scripts]
gen3 = "gen3.cli.__main__:main"

[tool.poetry.plugins."gen3.plugins"]

[build-system]
requires = ["poetry>=1.4.1"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = [
    "tests",
]
